// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should inc th counter 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
    title="pipi"
  />
</div>
`;

exports[`ProductCard should show the component correctly 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    Product Card
  </h1>
</div>
`;
